--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "author": "Code Jamboree LLC",
   "license": "MIT",
   "devDependencies": {
+    "@codejamboree/js-logger": "^2.1.0",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
